[package]
name = "async-sema"
version = "0.1.3"
edition = "2021"
rust-version = "1.71"
license = "MIT"
repository = "https://github.com/fawdlstty/async-sema-rs"
homepage = "https://github.com/fawdlstty/async-sema-rs"
description = "Async semaphore library"
keywords = ["async", "semaphore", "lock"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "5.3.1"

[dev-dependencies]
tokio = { version = "1.38.1", features = ["full"] }
